# mlir-cgra

./: .gitmodules  CMakeLists.txt  compile.sh  notes.org
cmake/: easyloggingpp.cmake
experiments/MiniLM/baseline/: 02-linalg-elide.mlir  script4x4.sh
experiments/demo/add/: 04-finalized.mlir  05-tiled.mlir  06-locating.mlir  10-accel-llvm.mlir  12-accel.ll  CustomizedRuntime.cpp  accel-bare-n.ll  accel-bare-opt.ll  accel-bare.ll  main.cpp  test_bare_ptr.sh
experiments/morpher/add/: 03-fused.mlir  07-host.mlir  09-host-llvm.mlir  11-model.ll  acc-opaque.mlir  acc.ll  acc.mlir  accel-bare-n.ll  accel-bare-opt.ll  accel-bare-opt_instrument.ll  accel-bare.ll  accel-bare.mlir  accel-for.mlir  accel-simple-map.mlir  cfg.generic_0.dot  generic_0_INNERMOST_LN1after_handleSELECTNodes_PartPredDFG.dot  generic_0_INNERMOST_LN1bef_handlePHINodes_PartPredDFG.dot  generic_0_PartPredDFG.dot  generic_0_PartPredDFG.xml  generic_0_PartPredDFG_simple.dot  generic_0_mem_alloc.txt  host-accl.mlir  log  script.sh  simulate  test_bare_ptr.sh
experiments/morpher/add-1d/: add-test-final  add-test-final.ll  add-test-instrument-opt.ll  add-test-llvm.mlir  add-test-log.mlir  add-test-opt.ll  add-test.ll  bufferized.mlir  compile.sh  instrumentation.ll  linalg-input.mlir  log  lower.sh  tiled-final.ll  tiled-instrument-opt.ll  tiled-opt.ll  tiled.ll  tiled.mlir
experiments/morpher/add-3d/: 01-linalg.mlir  07-host-4.mlir  log  lower.sh
experiments/morpher/add-e2e/: 04-finalized.mlir  05-promoted.mlir  05-tiled.mlir  06-locating.mlir  07-host.mlir  08-accel.mlir  09-host-llvm.mlir  10-accel-llvm.mlir  11-model.ll  12-accel.ll  cgra_generic_0_interface.xml  cgra_generic_0_test.xml  final_12-accel.ll  input.mlir  instr_12-accel.ll  opt_12-accel.ll  script.sh
experiments/morpher/conv2d/: 01-linalg.mlir  02-tiled.mlir  03-buf.mlir  04-promoted.mlir  06-locating.mlir  07-host.mlir  08-accel.mlir  10-accel-llvm.mlir  log.mlir  morpher.sh  run.org  script4x4.sh  scripts.sh  test.mlir
experiments/morpher/conv2d/transform-ops/: promote.mlir  tile-fuse-interchange.mlir  tile-fuse.mlir  to-memref.mlir
experiments/morpher/micro_speech/: 01-linalg.mlir
include/morpher/: cmake_install.cmake
include/morpher/Dialect/: CMakeLists.txt  cmake_install.cmake
include/morpher/Dialect/Morpher/: cmake_install.cmake
include/morpher/Dialect/Morpher/IR/: CMakeLists.txt  MorpherDialect.h  MorpherOps.td  cmake_install.cmake
include/morpher/Dialect/Morpher/TransformOps/: CMakeLists.txt  MorpherTransformOps.h  MorpherTransformOps.td  Utils.h  cmake_install.cmake
include/morpher/Dialect/Morpher/Transforms/: CMakeLists.txt  Passes.h  Passes.td  cmake_install.cmake
include/morpher/Interface/: CMakeLists.txt  LaunchInterface.h  LaunchInterface.td  cmake_install.cmake
include/relay/: CMakeLists.txt
include/soda/: cmake_install.cmake
include/soda/Conversion/: Passes.h  Passes.td  cmake_install.cmake
include/soda/Conversion/KernelsToSODA/: LinalgToCGRA.h
include/soda/Dialect/: CMakeLists.txt  cmake_install.cmake
include/soda/Dialect/Relay/: CMakeLists.txt  Passes.hpp  RelayDialect.hpp  RelayOps.hpp  RelayOps.td
include/soda/Dialect/SNN/: cmake_install.cmake
include/soda/Dialect/SNN/IR/: cmake_install.cmake
include/soda/Dialect/SNN/Transforms/: cmake_install.cmake
include/soda/Dialect/SODA/: Passes.h  Passes.td  cmake_install.cmake
include/soda/Misc/: Common.hpp  Pipelines.h  cmake_install.cmake
include/soda/Transforms/: CMakeLists.txt  Passes.hpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/KernelsToSODA/: LinalgToCGRA.cpp  LinalgToCGRAPass.cpp
lib/Conversion/Relay/: AffineToSCF.cpp  CMakeLists.txt  RelayToAffine.cpp  SCFToLLVM.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Morpher/IR/: CMakeLists.txt  MorpherOps.cpp
lib/Dialect/Morpher/TransformOps/: CMakeLists.txt  MorpherTransformOps.cpp  Utils.cpp
lib/Dialect/Morpher/Transforms/: CMakeLists.txt  DynamicPassPipeline.cpp  LegalizeMorpher.cpp  MarkMapRegion.cpp  OutlineMorpherKernels.cpp  PassDetail.h
lib/Dialect/Relay/IR/: CMakeLists.txt  RelayDialect.cpp  RelayOps.cpp
lib/Dialect/Relay/Transforms/: CMakeLists.txt  OpFusion.cpp  PassDetail.hpp  ShapeInference.cpp
lib/Dialect/SODA/Transforms/: HostGeneration.cpp  KernelGeneration.cpp
lib/Interface/: LaunchInterface.cpp
lib/Misc/: CMakeLists.txt  Common.cpp  MemRef.cpp  MiscPasses.cpp
lib/Transforms/: CMakeLists.txt  OptimizeAffine.cpp  PassDetail.hpp
lib/lib/: CMakeLists.txt
lib/lib/Frontend/: OpConverter.cpp  RelayImporter.cpp
sim/: CGRAFunc.h  Common.h  GlobalRuntime.cpp  Simulator.cpp
test/: CMakeLists.txt
test/Dialect/Morpher/: dynamic_pass.mlir  mark_map.mlir  ops.mlir  transform-interp.mlir
test/Dialect/Morpher/transform-files/: tile.mlir
test/gtest/: CMakeLists.txt  TestMorpherUtils.cpp
tools/soda-opt/: CMakeLists.txt  soda-opt.cpp
